<resources>
    <string name="app_name">GuideMe</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_vihome">VIHomeActivity</string>
    <string name="title_activity_helper_home">HelperHomeActivity</string>
    <string name="title_activity_vivideo">VIVideoActivity</string>

    <!-- Menu -->
    <string name="account_menu">Account</string>
    <string name="change_server_menu">Change Server</string>
    <string name="change_password_menu">Change Password</string>
    <string name="logout_menu">Logout</string>
    <string name="change_server_hint">Input Video Server Url or Click Default</string>
    <string name="change_server_ok">OK</string>
    <string name="change_server_cancel">Cancel</string>
    <string name="change_server_default">Default</string>

    <!-- Login -->
    <string name="login_email_hint">example@sfsu.edu</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_login_button">Login</string>
    <string name="login_register_button">Register</string>
    <string name="login_register_button_v">Register as a Visual Impairer</string>
    <string name="login_register_button_h">Register as a Helper</string>
    <string name="login_forgot_password_button">Forgot Password</string>
    <string name="change_password_old_hint">Old Password</string>
    <string name="change_password_new_hint">New Password</string>
    <string name="change_password_code_hint">Code</string>
    <string name="change_password_button">Change Password</string>
    <string name="login_cancel_button">Cancel</string>
    <string name="login_continue_button">Continue</string>
    <string name="logout_button">Logout</string>
    <string name="email_not_ok_hint">Please Input a Valid Email</string>
    <string name="username_not_ok_hint">Username Can Only have Letters and Numbers</string>
    <string name="password_not_ok_hint">Password Must have %1$d Letters or More</string>

    <!-- VI Home -->
    <string name="call_public_button">Request Help from Anyone</string>
    <string name="call_friends_button">Request Help from Favorites</string>
    <string name="topic_hint">Choose a topic:</string>
    <string name="tag_hint">(Optional) Input 3 or less tags (separated with \",\"):</string>
    <string name="friend_hint">Call a Favorite or Anyone?</string>
    <string name="call_button">Start a Video Calling</string>
    <string name="call_navi_button">Start a Video Calling with Navigation</string>
    <string name="start_call_wo_navi">Please Input a Description about the Help You Need</string>
    <string name="start_call_w_navi">Please Input the Destination You Want to Go</string>
    <string name="start_call_cancel">Cancel</string>
    <string name="start_call_next">Next</string>
    <string name="select_friend">Please Select Your Favorites. Or None to Get Help from a Stranger.</string>

    <!-- VI Video -->
    <string name="accept_button">Accept</string>
    <string name="decline_button">Decline</string>
    <string name="connect_hint_vi">Waiting for someone to join</string>
    <string name="connect_start_vi">Start to talk</string>
    <string name="quit_button">STOP</string>
    <string name="quit_confirm_message">Are you leaving?</string>
    <string name="quit_confirm_button">YES</string>
    <string name="quit_cancel_button">Cancel</string>
    <string name="toggle_location_button_on">Helper can see your Location</string>
    <string name="toggle_location_button_off">Helper cannot see your Location</string>
    <string name="add_friend_button">Add friend</string>
    <string name="confirm_accept_helper">Start Video Call with %1$s?</string>
    <string name="helper_item_rating_hint">Rating: </string>
    <string name="helper_notice">There are %1$d Helpers in the List.</string>
    <string name="helper_empty_notice">There are No Helpers Now, Please Wait.</string>

    <!-- VI Rate -->
    <string name="vi_rate_submit_button">Submit</string>
    <string name="vi_rate_cancel_button">Cancel</string>
    <string name="vi_rate_hint">Please Rate the Helper</string>
    <string name="vi_rate_message">Rate %1$s with %2$s Points, is it OK?</string>
    <string name="vi_rate_ok_button">OK</string>
    <string name="vi_rate_change_button">Change</string>

    <!-- Helper Home -->
    <string name="get_room_list_button">Current Request</string>
    <string name="empty_list">No Request</string>
    <string name="room_enter_button">Enter</string>
    <string name="room_cancel_button">Cancel</string>
    <string name="room_confirm_message">Start video call with %1$s?</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="token_error_message_short">Error While Update GCM Token!</string>
    <string name="notify_message">%1$s Need Your Help</string>

    <!-- Helper Video -->
    <string name="connect_hint_helper">Waiting for visual impairer to accept</string>

    <!-- Helper Rate -->
    <string name="helper_rate_submit_button">Submit</string>
    <string name="helper_rate_cancel_button">Cancel</string>
    <string name="helper_rate_hint">Please Rate the Visual Impairer</string>
    <string name="helper_rate_message">Rate %1$s with %2$s Points, is it OK?</string>
    <string name="helper_rate_ok_button">OK</string>
    <string name="helper_rate_change_button">Change</string>

    <!-- Add Friend -->
    <string name="send_request_confirm_message">Add %1$s as a Favorite?</string>
    <string name="add_friend_confirm_message">%1$s Wants to Add You as a Favorite</string>
    <string name="add_friend_ok_button">OK</string>
    <string name="add_friend_cancel_button">Cancel</string>
    <string name="add_friend_send_message">Adding Favorite Request is Sent</string>
    <string name="add_friend_accept">You Added %1$s as a Favorite</string>
    <!--<string name="add_friend_refuse">You Didn't Add %1$s as a Favorite</string>-->

    <!-- Topics -->
    <string-array name="topics_array">
        <item>General</item>
        <item>Navigation</item>
        <item>Finding</item>
        <item>Cooking</item>
        <item>Recreation</item>
    </string-array>
    <string-array name="friends_array">
        <item>Anyone</item>
    </string-array>
    <string name="title_activity_helper_video">HelperVideoActivity</string>
    <string name="title_activity_vi_rate">VIRateActivity</string>
    <string name="title_activity_helper_rate">HelperRateActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
